src/objects/PlayerStatistics__c.object
<CustomObject>
    <fields>
        <fullName>CountLostGames__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CountLostGames</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountWonGames__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CountWonGames</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <label>Player</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>PlayersStatistics</relationshipLabel>
        <relationshipName>PlayersStatistics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tournament__c</fullName>
        <label>Tournament</label>
        <referenceTo>Tournament__c</referenceTo>
        <relationshipLabel>PlayersStatistics</relationshipLabel>
        <relationshipName>PlayersStatistics</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PlayerStatistic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PlayerStatistics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PlayersStatistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>